--- a/public/index.html
+++ b/public/index.html
@@ -95,12 +95,14 @@ function calculateByType(type, data) {
   var tabCtx = document.getElementById('goldenEgg')
   let typeMarket = marketCache.filter(i => (i.short === type.toUpperCase()))[0]
   let typePrice = parseFloat(typeMarket.price + '').toFixed(2)
+  console.log('miner data', data)
   console.log('zec', typeMarket, typeMarket.price, typePrice)
+  // console.log('marketCache', marketCache)
 
   for (let i = 0; i < marketCache.length; i++) {
     let price = parseFloat(marketCache[i].price).toFixed(2)
     let ratio = (typePrice / price).toFixed(3)
-    template += `<tr><td>${type.toUpperCase()}/${marketCache[i].short}</td><td>Ratio: ${ratio}</td><td>Price: ${price}</td></tr>\n`
+    if (type.toUpperCase() !== marketCache[i].short) template += `<tr><td>${type.toUpperCase()}/${marketCache[i].short}</td><td>Ratio: ${ratio}</td><td>Price: ${price}</td></tr>\n`
   }
 
   marketCtx.innerHTML = `<table><tr><td>${type.toUpperCase()}:${typePrice}</td><td>Cap: ${typeMarket.mktcap}</td><td>Supply: ${typeMarket.supply}</td><td>Volume: ${typeMarket.volume} (${typeMarket.cap24hrChange}%)</td></tr></table>`
@@ -113,10 +115,10 @@ function getByType() {
   let hash = document.getElementById('hash').value
   console.log('getByType', crncy, hash)
 
-  // '/zec/t1fcu6h82MDhMF1wEhTHfAd8FvMK8NNdG9x'
-  request(`${crncy}/${hash}`)
+  // '/miner/zec/t1fcu6h82MDhMF1wEhTHfAd8FvMK8NNdG9x'
+  request(`miner/${crncy}/${hash}`)
     .then(function(res){
-      //goo format!!
+      //go format!!
       var decoded = res
         .replace(/\\\"/g, '\"')
         .substr(1)
@@ -124,6 +126,21 @@ function getByType() {
       var data = JSON.parse(decoded)
 
       calculateByType(crncy, data)
+    }, function(err) {
+      console.log('err', err)
+    })
+
+  // '/zecusd'
+  request(`historical/${crncy}usd`)
+    .then(function(res){
+      //go format!!
+      var decoded = res
+        .replace(/\\n/g, '')
+        .replace(/\\\"/g, '\"')
+        .substr(1)
+      decoded = decoded.substring(0, decoded.length - 1)
+      var data = JSON.parse(decoded)
+      console.log('data res', data)
     }, function(err) {
       console.log('err', err)
     })
